# adr-lf

./: .gitignore  README.md  README.txt  SECURITY.md  SECURITY.txt  build_windows.bat  output.txt  pyproject.toml  requirements.txt
src/: config.py  gui.py  logger.py  main.py  ocr_engine.py  processor.py
tests/: create_dummy.py  test_ocr.py
