[project]
name = "adr-lf"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "customtkinter>=5.2.2",
    "img2pdf>=0.6.3",
    "pdf2image>=1.17.0",
    "pillow>=12.2.0",
    "pypdf>=6.10.2",
    "pytesseract>=0.3.13",
    "pytest>=9.0.3",
]
